--- a/tutorial-5/ponynote/frontend/src/index.css
+++ b/tutorial-5/ponynote/frontend/src/index.css
@@ -1,3 +1,6 @@
+@import url("css/normalize.css");
+@import url("css/sakura.css");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
